@@ -5,7 +5,7 @@
 
 pkgname=python-pygame
 pkgver=1.9.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Python game library"
 arch=('i686' 'x86_64')
 url="http://www.pygame.org/"
@@ -16,9 +16,14 @@ provides=('pygame')
 source=(http://pygame.org/ftp/pygame-${pkgver}release.tar.gz)
 
 build() {
-  cd ${srcdir}/pygame-${pkgver}release
-  python setup.py install --root=${pkgdir} --prefix=/usr
-  # Fixing permissions
-  chmod 644 ${pkgdir}/usr/include/python2.6/pygame/*
+    cd ${srcdir}/pygame-${pkgver}release
+    python setup.py install --root=${pkgdir} --prefix=/usr
+
+    # Copying the examples and tests
+    cp -R examples lib/* ${pkgdir}/usr/lib/python2.6/site-packages/pygame
+    cp -R test/* ${pkgdir}/usr/lib/python2.6/site-packages/pygame/tests
+
+    # Fixing permissions
+    chmod 644 ${pkgdir}/usr/include/python2.6/pygame/*
 }
 md5sums=('bf1123ece533998570c5e04bdcff5392')
